Move control added

--- a/Safin_AV_Checkmates_1.03/Assembly-CSharp.Player.csproj
+++ b/Safin_AV_Checkmates_1.03/Assembly-CSharp.Player.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Assets/Scripts/Checks/CheckContainer.cs" />
     <Compile Include="Assets/Scripts/Cells/CellContainer.cs" />
     <Compile Include="Assets/Scripts/Selected.cs" />
+    <Compile Include="Assets/Scripts/ValidMove.cs" />
+    <Compile Include="Assets/Scripts/MoveController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
